--- a/Lab04/doc.html
+++ b/Lab04/doc.html
@@ -2,7 +2,7 @@
     created Fall 2018 (09/29) 
     @author: Chan Kim (ck45) for CS 336 at Calvin College  
     note: For the readability of the code and making as similar as the example, 
-            I removed the unused codes and arranged the order of the codes.
+            I trimed the unused codes and arranged the order of the codes.
 -->
 <!DOCTYPE html>
 <html>
