--- a/homework2/public/getPerson.html
+++ b/homework2/public/getPerson.html
@@ -19,9 +19,9 @@
     </head>
     <body>
         <h2>Get Person</h2>
-        <form method="post">
+        <form class="ui-widget" method="post">
             <input id="ID" type="text" placeholder="Login ID">
-            <input id="get" type="submit" value="Get">
+            <input class="ui-button ui-widget ui-corner-all" id="get" type="submit" value="Get">
         </form>
         <div>
             <div id="name"></div>
